# databao-sample-dbt-projects

./: .gitignore  README.md  databao-CLI-feedback.md  feedback.md  mise.toml  pyproject.toml
.github/workflows/: hex-semantic-sync.yml
data-modeling-example/: pyproject.toml
data-modeling-example/.databao/: test_questions.csv
data-modeling-example/models/datamart/core/: mart_monthly_customer_churn.sql  mart_monthly_customer_orders.sql  mart_order_items_by_acquisition.sql  mart_order_items_enriched.sql
data-modeling-example/models/semantic/: sem_dim_customers.yml  sem_fct_order_items.yml  sem_fct_sales.yml  sem_mart_monthly_customer_churn.yml  sem_mart_monthly_customer_orders.yml  sem_mart_order_items_by_acquisition.yml  sem_rpt_cohort_analysis.yml
data-modeling-example/models/utilities/: util_date_spine.yml
data-modeling-example/tests/: mixed-intent.md
dbt-core-sample-duckdb/: profiles.yml
dbt-core-sample-duckdb/.databao/: .gitignore  test_questions.csv
dbt-core-sample-duckdb/models/semantic/: sem_mrt_sales.yml  sem_sales.yml  time_spine_daily.sql  time_spine_daily.yml
dbt-ecommerce-analytics/: .gitignore  README.md  dbt_project.yml  generate_data.py  profiles.yml
dbt-ecommerce-analytics/.databao/: test_questions.csv
dbt-ecommerce-analytics/.github/workflows/: test.yml
dbt-ecommerce-analytics/models/marts/: dim_customers.sql  fct_orders.sql  schema.yml
dbt-ecommerce-analytics/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
dbt-ecommerce-analytics/seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
